# whisper-grpc

./: Cargo.toml  build.rs  config.yaml
proto/stt/: transcribe.proto
src/: main.rs  server.rs  settings.rs
src/pb/: mod.rs
src/services/: mod.rs  transcribe_service.rs
src/transcribe/: mod.rs  transcribe_error.rs  transcriber.rs
