[package]
name = "trancribe"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
#tokenizers = "0.20.0"
whisper-rs = { version = "0.11.1", features = ["_gpu", "cuda", "default"] }
tonic = "0.12.2"
tonic-types = "0.12.2"
tonic-reflection = "0.12.2"
prost = "0.13.3"
prost-derive = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.18", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.14.0"
cuda-driver-sys = "0.3.0"
anyhow = "1.0.89"
thiserror = "1.0.64"

[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
    name = "transcribe-service"
    path = "src/server.rs"
